--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-kar-glassmorphism",
-  "version": "1.0.2",
-  "description": "React-Glassmorphism",
+  "version": "1.1.1",
+  "description": "React Glassmorphism package delivering 3 components which are fully customizable",
   "main": "glass.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "SET NODE_ENV=production babel /glass.js --out-dir dist --copy-files"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,13 @@
   "homepage": "https://github.com/dev-AshishRanjan/react-kar-glassmorphism#readme",
   "peerDependencies": {
     "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
