--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "react-kar-glassmorphism",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "React Glassmorphism package delivering 3 components which are fully customizable",
-  "main": "glass.js",
+  "main": "lib/glass.jsx",
+  "module": "es/glass.jsx",
+  "files": [
+    "css",
+    "es",
+    "lib",
+    "umd"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "SET NODE_ENV=production babel /glass.js --out-dir dist --copy-files"
+    "build": "nwb build-react-component",
+    "clean": "nwb clean-module && nwb clean-demo",
+    "prepublishOnly": "npm run build",
+    "start": "nwb serve-react-demo",
+    "test": "nwb test-react",
+    "test:coverage": "nwb test-react --coverage",
+    "test:watch": "nwb test-react --server"
   },
   "repository": {
     "type": "git",
@@ -27,11 +39,9 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2"
+    "nwb": "0.25.x",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1"
-  }
+  "dependencies": {}
 }
