adding demo gtihub action

--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "keywords": [
     "React",
     "Glassmorphism",
-    "kar",
-    "Ashish"
+    "kar"
   ],
   "author": "Kumar Ashish Ranjan",
   "license": "ISC",
